Good thing I found this crash. Time to put it on my friends server and watch it burn!!!!!!!